--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongo": "^0.1.0",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "soap": "^1.0.0",
+    "axios": "^1.4.0"
   }
 }
